fix: Plus sign slightly misaligned vertically

--- a/src/app/utility-components/plus-sign/plus-sign.component.css
+++ b/src/app/utility-components/plus-sign/plus-sign.component.css
@@ -4,6 +4,7 @@
   font-size: 100px;
   grid-column-start: 1;
   grid-column-end: 1;
+  height: 100%;
 }
 
 .plus-container rect {
